--- a/index.html
+++ b/index.html
@@ -11,5 +11,38 @@
     <div id="display-element"></div>
     <button onclick="displayDate()">Click Me</button>
     <hr/>
+    <br>
+    <label for="numToString">Num to String</label>
+    <input type="text"></input>
+    <button onclick="numToString()">Submit</button>
+    <br>
+    <label for="stringToNum()">String to Num</label>
+    <input type="text"></input>
+    <button onclick="stringToNum()">Submit</button>
+    <br>
+    <label for="getInputType">Get Input Type</label>
+    <input type="text"></input>
+    <button onclick="getInputType()">Submit</button>
+    <br>
+    <label for="add2Numbers">Add 2 Numbers</label>
+    <input type="text"></input> 
+    <input type="text"></input>
+    <button onclick="add2Numbers()">Submit</button>
+    <br>
+    <label for="myFunc">Runs when2 things are true</label>
+    <input type="text"></input> 
+    <input type="text"></input>
+    <button onclick="myFunc()">Submit</button>
+    <br>
+    <label for="my2ndFunc">Runs when1 of 2 things are true</label>
+    <input type="text"></input> 
+    <input type="text"></input>
+    <button onclick="my2ndFunc()">Submit</button>
+    <br>
+    <label for="my3rdFunc">Runs when both things are not true</label>
+    <input type="text"></input> 
+    <input type="text"></input>
+    <button onclick="my3rdFunc()">Submit</button>
+    <!-- <input class="numToString" type="number"> -->
   </body>
 </html>
